# TTK4123_Kybernetiske_metoder_2024_HOST

./: .gitignore  hello.py  pyproject.toml
examprep/Øvinger/Øving 6/: oving6.html  oving6.md
Øving 5/ipynb/: oving_5.ipynb
Øving 6/ipynb/: oving_6.ipynb
